--- a/src/GildedRose.Console/GildedRose.Console.csproj
+++ b/src/GildedRose.Console/GildedRose.Console.csproj
@@ -41,6 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="SpecialItem.cs" />
+    <Compile Include="NormalItem.cs" />
+    <Compile Include="ItemNames.cs" />
+    <Compile Include="ItemExtensions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
